trunk/Archive2/3c/3333a8b2b608ec/output
main.cpp:5:1: error: expected initializer before 'unsigned'
 unsigned char *m_start = static_cast<unsigned char*>(0x243);
 ^
main.cpp:6:57: error: invalid static_cast from type 'int' to type 'unsigned char*'
 unsigned char *m_end = static_cast<unsigned char*>(0x24F);
                                                         ^
main.cpp:7:1: error: 'size_t' does not name a type
 size_t pos = 10;
 ^
main.cpp:8:1: error: expected unqualified-id before 'if'
 if (m_start + pos >= m_end) // This gives the error
 ^
main.cpp:13:1: error: expected declaration before '}' token
 }
 ^
